updating delete route

--- a/Week4/views/show.ejs
+++ b/Week4/views/show.ejs
@@ -22,10 +22,8 @@
 	</p>
 
 		<p>[[EDIT BUTTON GOES HERE]]</p>
+		<p>[[DELETE BUTTON GOES HERE]]</p>
 
-		<form action='/<%= candy.id %>?_method=DELETE' method="POST">
-			<button>Delete Item</button>
-		</form>
 
 </div>
 
@@ -33,3 +31,54 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 		<form action="/<%= candy.id %>/edit">
+		    <input type="submit" value="Edit Candy">
+		</form> -->
+
+<!-- 		<form action='/<%= candy.id %>?_method=DELETE' method="POST">
+			<button>Delete Item</button>
+		</form> -->
